# snippets

./: mpcLogParser.py
BaseOfSupport2D/: CMakeLists.txt
BaseOfSupport2D/include/: main.h
BaseOfSupport2D/src/: main.cpp
IEstimatorsFactoryTest/: CMakeLists.txt
IEstimatorsFactoryTest/include/: EstimatorsCreator.h  EstimatorsCreatorImpl.h  EstimatorsFactory.h  IEstimator.h  LeggedOdometry.h  NewEstimator.h  QuaternionEKF.h
IEstimatorsFactoryTest/src/: LeggedOdometry.cpp  NewEstimator.cpp  QuaternionEKF.cpp  main.cpp
PrettyErrors/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
PrettyErrors/build-clang/: CMakeCache.txt  cmake_install.cmake
PrettyErrors/build-clang/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
PrettyErrors/build-clang/Release/: pretty-errors
PrettyErrors/build-clang/pretty-errors.build/Release/ALL_BUILD.build/: Script-46F78C0A3744475EA4CC06B0.sh  dgph  dgph~
PrettyErrors/build-clang/pretty-errors.build/Release/ZERO_CHECK.build/: Script-5F452F3D2D1F4AEFB1053699.sh  dgph  dgph~
PrettyErrors/build-clang/pretty-errors.build/Release/pretty-errors.build/: dgph  dgph~
PrettyErrors/build-clang/pretty-errors.build/Release/pretty-errors.build/Objects-normal/x86_64/: MyClass.d  main.d  pretty-errors.LinkFileList
PrettyErrors/build-clang/pretty-errors.xcodeproj/: project.pbxproj
PrettyErrors/build-gcc/: CMakeCache.txt  Makefile  cmake_install.cmake  pretty-errors
gaitParamsGenerator/: ComputeLowerAndUpperBounds.m  computeDelta.m  computeGamma.m  computeRisingAndFallingEdges.m  computeRisingAndFallingEdges.m~  doComputeRisingAndFallingEdges.m  drawFoot.m  drawFoot2.m  drawFootstepTrajectory.m  drawInitialStandingFeet.m  drawSingleFootStep.m  drawSupportPolygon.m  evaluateStopCondition.m  generateInterpTrajectory.m  interpolateSupportPhases.m  main.m  newStartingPositionAfterStep.m  normalToVectorXY.m  partialInterpolateDSLeftAhead.m  partialInterpolateDSRightAhead.m  partialInterpolateSSLeft.m  partialInterpolateSSRight.m
gurobiDenseExample/: CMakeLists.txt
gurobiDenseExample/cmake/: FindEigenGurobi.cmake  FindGUROBI.cmake
gurobiDenseExample/src/: dense_c++.cpp
prototypeTest/: CMakeLists.txt
prototypeTest/include/: Image.h  LandSatImage.h  SpotImage.h  untitled.txt
prototypeTest/src/: Image.cpp  LandSatImage.cpp  SpotImage.cpp  main.cpp
quaternionToEulerTests/: CMakeLists.txt
quaternionToEulerTests/src/: main.cpp
